--- a/نظام ادارة المبيعات/نظام ادارة المبيعات.vbproj
+++ b/نظام ادارة المبيعات/نظام ادارة المبيعات.vbproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
   </ItemGroup>
 
