--- a/نظام ادارة المبيعات/نظام ادارة المبيعات.vbproj
+++ b/نظام ادارة المبيعات/نظام ادارة المبيعات.vbproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>نظام_ادارة_المبيعات</RootNamespace>
-    <StartupObject>نظام_ادارة_المبيعات.Form1</StartupObject>
+    <StartupObject>نظام_ادارة_المبيعات.purchases</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
   </PropertyGroup>
